--- a/public/layout.pug
+++ b/public/layout.pug
@@ -31,11 +31,17 @@ html
         text-align: center;
       }
       .group-list {
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 0;
         text-align: center;
+        list-style-type: none;
+        text-align: left;
       }
-      .group-list-item {
-        margin-left: 40%;
+      pre {
+        word-wrap: break-word;
+        white-space: pre-wrap;
       }
 
   body
